5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1573_2896.log
== TEST (2019-03-13 14:22:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()"digite o nome:"

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()"digite o nome:"
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:23:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(var)"digite o nome:"

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input(var)"digite o nome:"
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:23:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:"

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.156791
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input()digite o nome:"
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:24:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome: "

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()digite o nome: "
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:25:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:"

# Impressao de saidas
print(var)()
-- ERROR:
File "XXXX", line 4
    var = input()digite o nome:"
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:25:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:"

# Impressao de saidas
print(var)()
-- EXECUTION TIME:
0.185953
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input()digite o nome:"
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:26:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(digite o nome:)"

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input(digite o nome:)"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:26:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:"

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()digite o nome:"
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:26:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:"

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()digite o nome:"
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:26:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:"

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.116105
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input()digite o nome:"
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:22:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:"

# Impressao de saidas
print(var(8))
-- ERROR:
File "XXXX", line 4
    var = input()digite o nome:"
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:22:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:"

# Impressao de saidas
print(var(8))
-- EXECUTION TIME:
0.161525
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input()digite o nome:"
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:22:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()digite o nome:
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:23:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = (input()digite o nome:)

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = (input()digite o nome:)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:23:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = (input()digite o nome:)

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.170375
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = (input()digite o nome:)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:23:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()(digite o nome:)

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()(digite o nome:)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:23:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()(digite o nome:)

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.202752
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input()(digite o nome:)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:23:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:)

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()digite o nome:)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:23:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:

# Impressao de saidas
print(var)8
-- ERROR:
File "XXXX", line 4
    var = input()digite o nome:
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:23:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()digite o nome:

# Impressao de saidas
print(var)8
-- EXECUTION TIME:
0.146225
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input()digite o nome:
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:26:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()"digite o nome:"

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input()"digite o nome:"
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:26:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()"digite o nome:"

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.208418
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input()"digite o nome:"
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:27:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:27:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.146694
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
